# PoireDB

./: .gitignore  AUTHORS  LICENSE  README.md  a.out  go.mod  test.c
.github/workflows/: MacOS.yml  Ubuntu.yml  Windows.yml  pql.yml
cmd/: poiredb.go
pkg/pql/: pql.go
pkg/util/: util.go
poire.py/poire_py/: __init__.py  iota.py  token.py
pql/: CMakeLists.txt  SYNTAX.md  build.sh  main.c  pql_lex.c  pql_parse.c  test.pql
pql/AST/: AST.c  AST_statement.c
pql/errors/: code_error.c  test_code_error.c
pql/include/: acutest.h  tau.h  tau_compilers.h  tau_misc.h  tau_types.h
pql/include/AST/: AST.h  AST_statement.h  AST_struct.h
pql/include/errors/: code_error.h
pql/include/lexer/: lexer.h
pql/include/log/: log.h
pql/include/parser/: parser.h
pql/include/token/: position.h  token.h  type.h  value.h
pql/include/util/: file.h  string.h
pql/lexer/: lexer.c  test_lexer.c
pql/log/: log.c
pql/parser/: parser.c  test_parser.c
pql/token/: position.c  test_token.c  token.c  value.c
pql/util/: file.c  string.c
server/src/: CMakeLists.txt  main.c  mongoose.c
server/src/include/: mongoose.h
server/src/templates/: index.html
src/: main.c
src/include/lexer/: lexer.h
src/include/token/: position.h  token.h  type.h  value.h
src/include/util/: string.h
src/lexer/: lexer.c
src/token/: position.c  token.c  value.c
src/util/: string.c
